test/error/index5.luau
local n = {}
n[nil] = "y"
